# extension

./: .gitignore  README.md  esbuild.config.mjs  manifest.json  package-lock.json  package.json  tsconfig.json
src/api/: brand-client.ts  brand-detector.ts
src/background/: service-worker.ts
src/content/: index.ts  overlay.css  overlay.ts  wasm-scorer.ts
src/popup/: chat.ts  popup.css  popup.html  popup.ts
src/scoring/: alternatives.ts  brand-ratings.ts  cost-per-wear.ts  material-database.ts  sustainability-engine.ts
src/scrapers/: asos-scraper.ts  base-scraper.ts  generic-scraper.ts  hm-scraper.ts  nike-scraper.ts  scraper-registry.ts  shein-scraper.ts  uniqlo-scraper.ts  zara-scraper.ts
src/shared/: constants.ts  messaging.ts  types.ts
supabase/functions/ai-stylist/: index.ts
wasm-scorer/: Cargo.toml
wasm-scorer/src/: lib.rs
