[package]
name = "rewoven-wasm-scorer"
version = "0.1.0"
edition = "2021"
description = "WASM-based sustainability scorer for the Rewoven Chrome extension"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"

[profile.release]
opt-level = "s"
lto = true
